spade-tests/src/snapshots/spade_tests__typeinference__negative_second_range_index_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(x: [int<8>; 6]) -> [int<8>; 1] {
    x[1..-5]
}


error: Expected type [_; #uint], got [_; -6]
  ┌─ testinput:2:5
  │
2 │     x[1..-5]
  │     ^^^^^^^^ Expected [_; #uint], got [_; -6]
  │
  = note: Expected: #uint
                in: [_; #uint]
               Got: -6
                in: [_; -6]
